// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large test: synchronized mode applies major message 1`] = `
Object {
  "/changelog/5.0.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "four": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "one": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "baz",
              "type": "fix",
            },
          ],
          "version": "5.0.0",
        },
        "three": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "two": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 2,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/one/dependencies/five": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
}
`;

exports[`large test: synchronized mode applies messages with multiple affected packages 1`] = `
Object {
  "/changelog/4.6.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: waz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "source": Array [
                "two",
                "three",
              ],
              "subject": "dependency update: fix: tar",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: waz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "source": Array [
                "two",
                "three",
              ],
              "subject": "dependency update: fix: tar",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "waz",
              "type": "feat",
            },
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "source": Array [
                "two",
                "three",
              ],
              "subject": "dependency update: fix: tar",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "three": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: waz",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "two": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: waz",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/messages/1": Object {
    "operation": "delete",
  },
  "/packages/five/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/five": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
}
`;

exports[`large test: synchronized mode applies minor message 1`] = `
Object {
  "/changelog/4.6.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "bar",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "three": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "two": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/five": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
}
`;

exports[`large test: synchronized mode applies patch message 1`] = `
Object {
  "/changelog/4.5.7": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "4.5.7",
        },
        "four": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "4.5.7",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "foo",
              "type": "fix",
            },
          ],
          "version": "4.5.7",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "4.5.7",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "4.5.7",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 0,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/one/dependencies/five": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
}
`;

exports[`large test: synchronized mode applies several messages 1`] = `
Object {
  "/changelog/4.6.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: taz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: raz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": Array [
                "three",
              ],
              "subject": "dependency update: fix: roo",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: taz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: raz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": Array [
                "three",
              ],
              "subject": "dependency update: fix: roo",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "taz",
              "type": "feat",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "raz",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": Array [
                "three",
              ],
              "subject": "dependency update: fix: roo",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "three": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "subject": "roo",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: taz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: raz",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
        "two": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: feat: taz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "source": Array [
                "one",
              ],
              "subject": "dependency update: fix: raz",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": Array [
                "three",
              ],
              "subject": "dependency update: fix: roo",
              "type": "dependency update",
            },
          ],
          "version": "4.6.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/messages/1": Object {
    "operation": "delete",
  },
  "/messages/2": Object {
    "operation": "delete",
  },
  "/packages/five/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/five": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
}
`;
